topmonks.cz -Meet Us poslední úpravy textu

--- a/www.topmonks.cz/src/html/kde-nas-najdete/index.html
+++ b/www.topmonks.cz/src/html/kde-nas-najdete/index.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/topmonks.html' %}
-{% block title %}Meet Us - TopMonks{% endblock %}
+{% block title %}Kde nás najdete - TopMonks{% endblock %}
 {% block head %}
 <link rel="stylesheet" href="/stylesheets/meet-us.css">
 {% endblock %}
@@ -41,7 +41,7 @@
   <section class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Můžeš<b>nás navštívit</b> zde</h2>
+        <h2>Můžeš<b> nás potkat</b> zde</h2>
       </div>
       <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout-wrapper">
         <div class="mdc-layout-grid__inner">
@@ -95,8 +95,7 @@
         <div class="mdc-layout-grid__inner tm-layout-wrapper">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="https://coderetreat.cz/">Code Retreat CZ</a></h3>
-            <p>V kurzu Code retreat se intenzivně věnujeme základům pro vývoj softwaru. Code Retreat ti dá prostor a čas se soustředit a nabít novými zkušenostmi. Code retreat is an intensive one day training focused on the basics of software development. Thanks to the fact that the developers are not under pressure of results delivery CodeRetreat offers the opportunity to concentrate on improving your skills.</p>
-
+            <p>V kurzu Code retreat se intenzivně věnujeme základům pro vývoj softwaru. Code Retreat ti dá prostor a čas se soustředit a nabít novými zkušenostmi.</p>
             <div class="links"><a href="https://coderetreat.cz/">https://coderetreat.cz/</a></div>
           </div>
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
@@ -138,8 +137,8 @@
             <h3><a href="http://devminutes.cz/">DevMinutes</a></h3>
             <p>Náš vážený kolega Jirka se rozhodl vytvořit svůj vlastní podcast
               s&nbsp;mnoha zajímavými hosty. Součástí je pestrá řada témat začínaje
-              vzdělávacím systémem, konče umělou inteligenci&nbsp;&ndash; v&nbsp;Jirkově široké
-              škále zájmů si každý najde to, co ho zrovna baví a zajímá.</p>
+              vzdělávacím systémem, konče umělou inteligencí&nbsp;&ndash; v&nbsp;Jirkově široké
+              nabídce si každý najde to, co ho zrovna baví a zajímá.</p>
 
             <div class="links"><a href="http://devminutes.cz/">http://devminutes.cz/</a></div>
           </div>
@@ -154,7 +153,7 @@
             <h3><a href="http://www.wisephora.com/">Wisephora</a></h3>
             <p>Wisephora je skupinová diskuze o&nbsp;budoucnosti práce, propojování lidí, a
               jak tyto otázky správně uchopit a pracovat s&nbsp;nimi. Těšit se můžete na
-              přednášky kvalifikovaných manažerů, významných českých firem
+              přednášky kvalifikovaných manažerů, zástupců významných českých firem
               i&nbsp;různých vizionářů s&nbsp;jejich inovativními myšlenkami.</p>
 
             <div class="links"><a href="http://www.wisephora.com/">http://www.wisephora.com/</a></div>
