--- a/www.topmonks.cz/src/html/shared/header.html
+++ b/www.topmonks.cz/src/html/shared/header.html
@@ -26,9 +26,9 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-8-desktop">
         <nav id="navigation" class="tm-menu">
           <ul class="tm-menu__list">
-            <li class=""><a href="/about-us/">about us</a></li>
-            <li class=""><a href="/meet-us/">meet us</a></li>
-            <li class=""><a href="/contact/">contacts</a></li>
+            <li class=""><a href="/o-nas/">o nás</a></li>
+            <li class=""><a href="/kde-nas-najdete/">kde nás najdete</a></li>
+            <li class=""><a href="/html/kontakt/">kontakty</a></li>
             <li class=""><a href="https://studio.topmonks.com/">startup studio</a></li>
           </ul>
         </nav>
