Topmonks.cz - O nás - úprava textu

--- a/www.topmonks.cz/src/html/o-nas/index.html
+++ b/www.topmonks.cz/src/html/o-nas/index.html
@@ -1,9 +1,8 @@
 {% extends 'layouts/topmonks.html' %}
-{% from 'macros/helpers.html' import sprite %}
-
-{% set page = 'topmonks-index' %}
-{% set language = cs %}
-
+{% block title %}O nás - TopMonks{% endblock %}
+{% block head %}
+<link rel="stylesheet" href="/stylesheets/meet-us.css">
+{% endblock %}
 
 {% block content %}
 
@@ -18,26 +17,26 @@
           chceme zákazníkům dodávat perfektně odvedenou práci. Protože většina
           z&nbsp;nás pracuje vzdáleně (remotně), používáme následující nástroje
           k&nbsp;tomu, abychom měli všichni přehled o&nbsp;dění ve firmě a komunikovali mezi
-          sebou tak, jako bychom seděli u&nbsp;jednoho stolu. Přestaň počítat hodiny a
-          dělej svou práci tak, jak nejlépe dovedeš.</p>
+          sebou tak, jako bychom společně seděli u&nbsp;jednoho stolu. Přestaň počítat hodiny a
+          dělej svoji práci tak, jak nejlépe dovedeš.</p>
       </div>
       <div class="box mdc-layout-grid__cell">
         <h3>Slack</h3>
         <p>Efektivní komunikace je podstatou spolupráce nejen v&nbsp;rámci firmy, ale
-          také s&nbsp;některými našimi zákazníky. Můžeš sedět, kde chceš, ale když
+          také s&nbsp;našimi zákazníky. Můžeš sedět, kde chceš, ale když
           pracuješ, měl bys být ostatním k&nbsp;dispozici.</p>
       </div>
       <div class="box mdc-layout-grid__cell">
         <h3>GitHub</h3>
-        <p>Všechny naše projekty běží na GitHubu. U&nbsp;mnoho z&nbsp;nich používáme
-          GitHub Issues pro sledování jejich progresu. Spolu se Slackem je GitHub alfa a
+        <p>Všechny naše projekty běží na GitHubu. U&nbsp;mnoha z&nbsp;nich používáme
+          GitHub Issues pro sledování jejich samotného progresu. Spolu se Slackem je GitHub alfa a
           omega naší spolupráce.</p>
       </div>
       <div class="box mdc-layout-grid__cell">
         <h3>Quip</h3>
         <p>Zde sdílíme veškerou projektovou dokumentaci, faktury, naši firemní
           knihovnu&nbsp;&ndash; v&nbsp;podstatě veškeré naše znalosti. Popros rarouše a on ti
-          nasdílí svoji super kuchařku.</p>
+          nasdílí svoji super kuchařku plnou receptů.</p>
       </div>
       <div class="box mdc-layout-grid__cell">
         <h3>Swarmpit</h3>
@@ -75,7 +74,7 @@
           <li><b>共享</b> Dávej a bude ti dáno.</li>
           <li><b>怪事</b> Zvláštnost, nekonvenčnost je vítána.</li>
         </ul>
-        <p>Jestli tě baví naše hodnoty a myšlenky, <a href="mailto:jobs@topmonks.com">přidej se k nám</a>. Nebo nám <a href="mailto:sales@topmonks.com">dej vědět</a> , jak ti můžeme pomoci s tvým projektem. Anebo nás jednoduše <a href="/contact/">přijď navštívit</a> na jednu z našich mnoha akcí. Moc rádi potkáváme zajímavé lidi.</p>
+        <p>Jestli tě baví naše hodnoty a myšlenky, <a href="mailto:jobs@topmonks.com">přidej se k nám</a>. Nebo nám <a href="mailto:sales@topmonks.com">dej vědět</a>, jak ti můžeme pomoci s tvým projektem. Anebo nás jednoduše <a href="/contact/">přijď navštívit</a> na jednu z našich mnoha akcí. Moc rádi potkáme nové a zajímavé lidi.</p>
       </div>
     </div>
   </section>
