Topmonks.cz - Kontakt

--- a/www.topmonks.cz/src/html/kontakt/index.html
+++ b/www.topmonks.cz/src/html/kontakt/index.html
@@ -1,12 +1,12 @@
 {% extends 'layouts/topmonks.html' %}
 {% set page = 'topmonks-contact' %}
-{% block title %}TopMonks Kontakt{% endblock %}
+{% block title %}TopMonks Contacts{% endblock %}
 
 {% block head %}
 <meta property="og:title" content="TopMonks Contacts">
 <meta property="fb:pages" content="190700404282725">
 <meta property="og:type" content="business.business">
-<meta property="og:url" content="https://www.topmonks.com/contact/">
+<meta property="og:url" content="https://www.topmonks.cz/kontakt/">
 <meta property="og:site_name" content="TopMonks.com">
 <meta property="business:contact_data:street_address" content="Struhařovská 2931/9"/>
 <meta property="business:contact_data:locality" content="Praha 4"/>
@@ -14,7 +14,7 @@
 <meta property="business:contact_data:country_name" content="Czech republic"/>
 <meta property="business:contact_data:email" content="info@topmonks.com"/>
 <meta property="business:contact_data:phone_number" content="+420 226 257 521"/>
-<meta property="business:contact_data:website" content="https://www.topmonks.com/"/>
+<meta property="business:contact_data:website" content="https://www.topmonks.cz/"/>
 <style>
   .box.address {
     padding: 0;
