Price removed. There were no direct leads via the website so far and it doesn't make sense to open the cards in B2B world.

--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -436,8 +436,8 @@
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Cena kurzu</h2>
-          <p>Cena za 4 kurzy: 25 000 Kč</p>
           <p>Kurz obsahuje 4 lekce ve 4 týdnech po 1.5 hodině</p>
+          <p>Cena se odvíjí od počtu dětí a lokace. Čekejte od nás neodolatelnou nabídku.</p>
         </div>
       </div>
     </div>
