TopMonks.cz - Kontakt - úprava a překlad

--- a/www.topmonks.cz/src/html/kontakt/index.html
+++ b/www.topmonks.cz/src/html/kontakt/index.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/topmonks.html' %}
-{% set page = 'topmonks-contact' %}
-{% block title %}TopMonks Contacts{% endblock %}
+{% set page = 'topmonks-kontakt' %}
+{% block title %}Kontakt - TopMonks{% endblock %}
 
 {% block head %}
 <meta property="og:title" content="TopMonks Contacts">
@@ -42,7 +42,7 @@
         </div>
 
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <p><b>Kancelář</b><br> Pevná linka:
+          <p><b>Kancelář</b><br> Telefon:
             <a itemprop="telephone" href="tel:+420226257521">+420&nbsp;226&nbsp;257&nbsp;521</a><br>
             <a itemprop="email" href="mailto:info@topmonks.com">info@topmonks.com</a></p>
         </div>
@@ -55,7 +55,7 @@
         </div>
 
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop" itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
-          <p><b>Office and billing</b><br>
+          <p><b>Kancelář a fakturace</b><br>
             <span itemprop="name">Daria Nováková</span>:
             <a itemprop="telephone" href="tel:+420774647793">+420&nbsp;774&nbsp;647&nbsp;793</a><br>
             <a itemprop="email" href="mailto:daria.novakova@topmonks.com">daria.novakova@​topmonks.com</a>
@@ -71,7 +71,7 @@
         </div>
 
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop" itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
-          <p><b>Software projects</b><br>
+          <p><b>Software projekty</b><br>
             <span itemprop="name">Jirka Pénzeš</span>:
             <a itemprop="telephone" href="tel:+420732364404">+420&nbsp;732&nbsp;364&nbsp;404</a><br>
             <a itemprop="email" href="mailto:jiri.penzes@topmonks.com">jiri.penzes@​topmonks.com</a></p>
