Kontakt - úprava cesty

--- a/www.topmonks.cz/src/html/shared/header.html
+++ b/www.topmonks.cz/src/html/shared/header.html
@@ -28,7 +28,7 @@
           <ul class="tm-menu__list">
             <li class=""><a href="/o-nas/">o nás</a></li>
             <li class=""><a href="/kde-nas-najdete/">kde nás najdete</a></li>
-            <li class=""><a href="/html/kontakt/">kontakty</a></li>
+            <li class=""><a href="/kontakt/">kontakt</a></li>
             <li class=""><a href="https://studio.topmonks.com/">startup studio</a></li>
           </ul>
         </nav>
