TopMonks.cz - StartUp Studio

--- a/www.topmonks.cz/src/html/studio.topmonks.cz/index.html
+++ b/www.topmonks.cz/src/html/studio.topmonks.cz/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>studio.topmonks.com</title>
+  <title>studio.topmonks.cz</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -45,7 +45,7 @@
             <li><a href="/www.topmonks.com/about-us/">O NÁS</a></li>
             <li><a href="/www.topmonks.com/meet-us/">KDE NÁS NAJDETE</a></li>
             <li><a href="/www.topmonks.com/contacts">KONTAKT</a></li>
-            <li><a href="/studio.topmonks.com/">STARTUP STUDIO</a></li>
+            <li><a href="/studio.topmonks.cz/">STARTUP STUDIO</a></li>
           </ul>
         </nav>
       </div>
@@ -82,7 +82,7 @@
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Co ti můžeme nabídnout?</h2>
-          <p class="description">Jsme vývojáři pro tvůj startup. Nabízíme ti ty nejlepší vývojáře,
+          <p class="description">Jsme vývojáři pro tvůj startup. Nabízíme ti ten nejlepší tým programátorů,
             nebo CTO ideálního přímo pro tvůj projekt. U&nbsp;nás si
             každopádně vždy&nbsp;vítán!</p>
       </div>
