TopMonks.cz - Úprava textu ve footeru CZ

--- a/www.topmonks.cz/src/html/shared/footer.html
+++ b/www.topmonks.cz/src/html/shared/footer.html
@@ -6,7 +6,7 @@
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>O nás</h3>
-        <p>Jsme tví obchodní partneři pro vývoj softweru se zkušenostmi jak ve startup oblasti, tak v korporátním prostředí.</p>
+        <p>Jsme vývojáři softwaru pro váš byznys se zkušenostmi jak se startupy, tak s korporátním prostředím.</p>
         <p>Pokud se ti líbí naše myšlení, přijď a <a href="/o-nas/">přidej se k nám</a> a dej nám vědět, jak ti
           <a href="/o-nas/">můžeme pomoci s tvým projektem</a>.
           Nebo nás jednoduše <a href="/kontakt/">přijď navštívit</a>. Rádi <a href="/kde-nas-najdete/">potkáváme nové a zajímavé lidi</a>.
