TopMonks.cz: přidání stylesheets do HP

--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -20,6 +20,8 @@
 <meta property="og:url" content="https://www.topmonks.cz/">
 <meta property="og:site_name" content="TopMonks.cz">
 <link rel="stylesheet" href="/stylesheets/main.scss">
+<link rel="stylesheet" href="/stylesheets/components/case-studies/index.scss">
+{% endblock %}
 
 {% block content %}
 
