--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -132,17 +132,17 @@
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
         <div
-          class="basic-info_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
+          class="basic-info_box basic-info_box_icons basic-info_box_age mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
           <h2>7&ndash;12 let</h2>
           <p>pořádáme kurzy pro děti</p>
         </div>
         <div
-          class="basic-info_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
+          class="basic-info_box basic-info_box_icons basic-info_box_calendar mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
           <h2>4&nbsp;týdny</h2>
           <p>celý kurz trvá 4&nbsp;týdny</p>
         </div>
         <div
-          class="basic-info_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
+          class="basic-info_box basic-info_box_icons basic-info_box_capacity mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
           <h2>10&nbsp;dětí</h2>
           <p>kapacita</p>
         </div>
@@ -156,9 +156,9 @@
           <h2>Co naučíme vaše děti?</h2>
         </div>
         <div
-          class="fill_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-desktop">
+          class="fill_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-desktop">
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
           <h3>1.&nbsp;Tvoříme hru I</h3>
           <h4>Základy</h4>
           <p>První lekce se věnuje zejména úvodu do světa programování a základům
@@ -166,9 +166,9 @@
             programovat funkční a zábavnou počítačovou&nbsp;hru.</p>
         </div>
         <div
-          class="fill_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-desktop">
+          class="fill_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-desktop">
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
           <h3>2. Tvoříme hru II</h3>
           <h4>Hours of Code</h4>
           <p>Druhá lekce navazuje na první a pokračujeme v&nbsp;tvorbě her. Přidáváme
@@ -177,9 +177,9 @@
         </div>
 
         <div
-          class="fill_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-desktop">
+          class="fill_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-desktop">
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
           <h3>3. Robot Edison I</h3>
           <h4>Úvod</h4>
           <p>Pomocí robota Edison si děti vyzkouší z&nbsp;virtuálního světa ovládat
@@ -188,9 +188,9 @@
         </div>
 
         <div
-          class="fill_3 mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-desktop">
+          class="fill_3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-desktop">
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
           <h3>4. Robot Edison II</h3>
           <h4>Pokročilé</h4>
           <p>V&nbsp;posledním kurzu se děti učí další možnosti ovládání robota a
@@ -222,12 +222,12 @@
                 action="https://topmonks.us12.list-manage.com/subscribe/post?u=3a1d5081e16aac38b8d212eac&amp;id=3dfcb7600a"
                 method="post" target="_blank">
             <div
-              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-6-desktop">
+              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-7-desktop">
               <label><span class="a11y--hidden">Zadejte váši e-mailovou adresu:</span> <input type="email" name="EMAIL"
                                                                                               placeholder="vas@email.cz"></label>
             </div>
             <div
-              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-6-desktop">
+              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-desktop">
               <button>ODESLAT</button>
             </div>
           </form>
@@ -242,31 +242,53 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Naši Lektoři</h2>
         </div>
-        <div
-          class="name mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          Jiří Penzeš
-        </div>
-        <div
-          class="name mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          Jan Macháček
-        </div>
-
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-          <div class="photo">
-            <img src="/images/j.penzes.jpg" alt="[fotografie] Jiří Penzeš">
+        <div class="lectors mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="mdc-layout-grid__inner">
+            <div
+              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <button class="lectors_jiri">JIŘÍ PÉNZEŠ</button>
+            </div>
+            <div
+              class="lectors_jan mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <button class="lectors_jan">JAN MACHÁČEK</button>
+            </div>
           </div>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+          <img src="/images/lektori/jiri-penzes.png" alt="[fotografie] Jiří Penzeš">
+        </div>
+        <div class="lectors-box mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+          <p><b>Lektor - Jiří Pénzeš</b></p>
+          <p>Vývoji software se věnuji téměř deset let. Za tu dobu jsem měl možnost nahlédnout pod pokličku různě
+            velikým projektům a vidět jak fungují různě veliké týmy. Vždy jsem měl slabost pro čistý kód a doržování
+            určitých praktik, aby se zlepšovala code base.
+          </p>
+          <p>Baví mě sdílet znalosti a pracovat s komunitou. Společně s kamarády organizujeme již několik let Global
+            day of CodeRetreat a mimo nich jsem facilitoval i lokální, kde se snažíme propagovat čistý kód a dobré
+            praktiky psaní kódu. Zkouším v česku šířit koncept Coding Dojo, který pomáhá sdílet znalosti a zkoušet
+            různé cesty na poli vývoje.
+          </p>
+          <p>
+            V případě zájmu je možné postavit i školení na míru, dle vašich potřeb. Vše lze přizpůsobit, aby to co
+            nejlépe zapadlo na vaše potřeby. Mimo školení je možné se domluvit i na individuálních konzultacích.
+          </p>
           <a class="mail" href="mailto:jiri.penzes@topmonks.com&amp;subject=Programov%C3%A1n%C3%AD%20pro%20d%C4%9Bti">jiri.penzes@topmonks.com</a>
         </div>
+
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
           <div class="photo">
             <img src="/images/machy.jpg" alt="[fotografie] Jan Macháček">
           </div>
           <a class="mail" href="mailto:jan.machacek@topmonks.com&amp;subject=Programov%C3%A1n%C3%AD%20pro%20d%C4%9Bti">jan.machacek@topmonks.com</a>
         </div>
-
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+        </div>
       </div>
     </div>
   </section>
+
+
+
 
   <section id="galerie" class="gallery">
     <div class="mdc-layout-grid wrapper">
